# skribe

./: .cruft.json  .flake8  .gitignore  .gitmodules  LICENSE  Makefile  README.md  flake.nix  pyproject.toml
.github/actions/with-docker/: Dockerfile  action.yaml
.github/workflows/: master.yaml  test-fuzzers.sh  test.yaml  update.yaml
lib/skribe-rs/: Cargo.toml
lib/skribe-rs/src/: lib.rs
nix/: README.md
nix/skribe/: build-systems-overlay.nix  default.nix
nix/skribe-fuzz/: default.nix
nix/skribe-fuzz-source/: default.nix
nix/skribe-kdist/: default.nix
nix/skribe-pyk/: build-systems-overlay.nix  default.nix
nix/skribe-source/: default.nix
package/: smoke-test.sh
skribe-fuzz-rs/: Cargo.toml  build.rs  run-fuzzer.sh
skribe-fuzz-rs/fuzz/: Cargo.toml
skribe-fuzz-rs/fuzz/fuzz_targets/: fuzz_target_1.rs
skribe-fuzz-rs/src/: abi.rs  fuzz_config.rs  fuzz_spec.rs  lib.rs
src/skribe/: __main__.py  contract.py  progress.py  simulation.py  skribe.py  utils.py
src/skribe/kast/: syntax.py
src/skribe/kdist/: plugin.py
src/skribe/kdist/stylus-semantics/: auto-allocate.md  configuration.md  coverage.md  data.md  evm-coverage.md  evm-types.md  hostfuns.md  memory-opt.md  skribe.md  stylus.md  switch.md  wasm-coverage.md  wasm-ops.md
src/tests/integration/: test_integration.py
src/tests/integration/data/contracts/call-hello/: Cargo.toml
src/tests/integration/data/contracts/call-hello/src/: lib.rs  main.rs
src/tests/integration/data/contracts/call_hello_foundry/: foundry.toml
src/tests/integration/data/contracts/call_hello_foundry/src/: CallCounter.sol
src/tests/integration/data/contracts/erc20/: Cargo.toml
src/tests/integration/data/contracts/erc20/src/: erc20.rs
src/tests/integration/data/contracts/test-cheatcodes/: Cargo.toml
src/tests/integration/data/contracts/test-cheatcodes/src/: lib.rs  main.rs
src/tests/integration/data/contracts/test-erc20/: Cargo.toml
src/tests/integration/data/contracts/test-erc20/src/: lib.rs  main.rs
src/tests/integration/data/contracts/test-foundry-from-stylus/: Cargo.toml
src/tests/integration/data/contracts/test-foundry-from-stylus/src/: lib.rs  main.rs  skribe.rs
src/tests/integration/data/contracts/test-foundry-hello/src/: TestCounter.sol
src/tests/integration/data/contracts/test-foundry-simple/src/: Prank.sol
src/tests/integration/data/contracts/test-foundry-simple/test/: EmitContractTest.t.sol  Prank.t.sol  Simple.t.sol
src/tests/integration/data/contracts/test-hello-world/: Cargo.toml  skribe.json
src/tests/integration/data/contracts/test-hello-world/src/: lib.rs  skribe.rs
src/tests/integration/data/contracts/test-stylus-from-foundry/: .gitignore  foundry.toml
src/tests/integration/data/contracts/test-stylus-from-foundry/test/: StylusHelloWorld.t.sol
src/tests/integration/data/contracts/test-stylus-from-foundry/wasm/: stylus_hello_world.wasm
src/tests/integration/data/simulation/: call_counter.json  call_counter_evm_to_evm.json  call_counter_evm_to_wasm.json  call_counter_wasm_to_evm.json  counter.json  counter.wasm  hello_foundry.json  set_exit_code.json
src/tests/integration/data/wast/: msg_value.wast  set_exit_code.wast  storage_load_bytes32.wast  storage_set_and_get.wast
src/tests/unit/: test_unit.py
