[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skribe"
version = "0.1.14"
description = "Property testing for Stylus smart contracts"
readme = "README.md"
requires-python = "~=3.10"
dependencies = [
    "pykwasm@git+https://github.com/runtimeverification/wasm-semantics.git@bbc96eeb71ff17213d3a6127fa7876ec0c47ef57#subdirectory=pykwasm",
    "kontrol@git+https://github.com/runtimeverification/kontrol.git@v1.0.166",
]

[[project.authors]]
name = "Runtime Verification, Inc."
email = "contact@runtimeverification.com"

[project.scripts]
skribe = "skribe.__main__:main"
skribe-simulation = "skribe.simulation:main"
skribe-kdist = "pyk.kdist.__main__:main"

[project.entry-points.kdist]
stylus-semantics = "skribe.kdist.plugin"

[dependency-groups]
dev = [
    "autoflake",
    "black",
    "flake8",
    "flake8-bugbear",
    "flake8-comprehensions",
    "flake8-quotes",
    "flake8-type-checking",
    "isort",
    "mypy",
    "pep8-naming",
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "pytest-xdist",
    "pyupgrade",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.isort]
profile = "black"
line_length = 120

[tool.autoflake]
recursive = true
expand-star-imports = true
remove-all-unused-imports = true
ignore-init-module-imports = true
remove-duplicate-keys = true
remove-unused-variables = true

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.mypy]
disallow_untyped_defs = true
