[workspace]
members = ["fuzz"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
alloy-dyn-abi = "1.5.7"
alloy-json-abi = "1.5.7"
alloy-primitives = "1.5.7"
hex-literal = "1.1.0"
kframework = { git = "https://github.com/runtimeverification/kframework-rs.git", rev = "1e7ee3a" }
kframework_ffi = { git = "https://github.com/runtimeverification/kframework-rs.git", rev = "1e7ee3a" }
libfuzzer-sys = "0.4"
pico-args = "0.5.0"
serde = "1.0.228"
serde_json = "1.0.149"

[package]
name = "skribe-fuzz-rs"
version.workspace = true
edition.workspace = true

[dependencies]
alloy-json-abi.workspace = true
alloy-dyn-abi.workspace = true
serde.workspace = true
serde_json.workspace = true
kframework.workspace = true
kframework_ffi.workspace = true

[dev-dependencies]
alloy-primitives.workspace = true
hex-literal.workspace = true

