[workspace]
members = ["fuzz"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
alloy-dyn-abi = { version = "1.5.7", features = ["arbitrary"] }
alloy-json-abi = "1.5.7"
alloy-primitives = "1.5.7"
arbitrary = "1.4.2"
hex-literal = "1.1.0"
kframework = { git = "https://github.com/runtimeverification/kframework-rs.git", rev = "73c4986" }
kframework_ffi = { git = "https://github.com/runtimeverification/kframework-rs.git", rev = "73c4986" }
libafl = "0.15.4"
libafl_bolts = "0.15.4"
libfuzzer-sys = "0.4"
pico-args = "0.5.0"
serde = "1.0.228"
serde_json = "1.0.149"

[package]
name = "skribe-fuzz-rs"
version.workspace = true
edition.workspace = true

[dependencies]
alloy-json-abi.workspace = true
alloy-dyn-abi.workspace = true
arbitrary.workspace = true
serde.workspace = true
serde_json.workspace = true
kframework.workspace = true
kframework_ffi.workspace = true
libafl.workspace = true
libafl_bolts.workspace = true
pico-args = { workspace = true, features = ["eq-separator"] }

[dev-dependencies]
alloy-primitives.workspace = true
hex-literal.workspace = true

[[bin]]
name  = "skribe-fuzz"
path  = "bin/skribe_fuzz.rs"
