[package]
name      = "skribe-libfuzzer"
version   = "0.0.0"
publish   = false
edition.workspace = true

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys.workspace = true

[dependencies.skribe-fuzz-rs]
path = ".."

[[bin]]
name  = "fuzz_target_1"
path  = "fuzz_targets/fuzz_target_1.rs"
test  = false
doc   = false
bench = false
